# O2Game

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
Engine/: CMakeLists.txt
Engine/include/: Game.h
Engine/include/Rendering/: Renderer.h  Window.h
Engine/include/Rendering/Threading/: GameThread.h
Engine/include/Rendering/Vulkan/: Texture2DVulkan.h
Engine/include/Texture/: NumericTexture.h  Sprite2D.h  Texture2D.h
Engine/src/: Configuration.cpp  Game.cpp
Engine/src/Data/Imgui/: ImguiUtil.cpp
Engine/src/Fonts/: FontResources.cpp
Engine/src/Fonts/FallbackFonts/: kr.ttf.cpp
Engine/src/Rendering/: GameWindow.cpp  Renderer.cpp
Engine/src/Rendering/Vulkan/: Texture2DVulkan.cpp  VulkanEngine.cpp
Engine/src/Scenes/: SceneManager.cpp
Engine/src/Texture/: Color3.cpp  NumericTexture.cpp  Sprite2D.cpp  Texture2D.cpp
Engine/src/Threading/: GameThread.cpp
Game/: CMakeLists.txt
Game/src/: EnvironmentSetup.cpp  MyGame.cpp  MyGame.h  Version.h  main.cpp
Game/src/Data/: Chart.cpp  Chart.hpp  OJM.cpp  OJN.cpp  osu.cpp  osu.hpp
Game/src/Data/Util/: Util.cpp
Game/src/Engine/: Autoplay.cpp  BGMPreview.cpp  DrawableNote.cpp  FrameTimer.cpp  FrameTimer.hpp  GameAudioSampleCache.cpp  GameAudioSampleCache.hpp  GameTrack.cpp  GameTrack.hpp  LuaScripting.cpp  LuaScripting.h  Note.cpp  Note.hpp  NoteImageCacheManager.cpp  NoteImageCacheManager.hpp  RhythmEngine.cpp  RhythmEngine.hpp  ScoreManager.cpp  ScoreManager.hpp  SkinConfig.cpp  SkinConfig.hpp  SkinManager.cpp  SkinManager.hpp  TimingLine.cpp  VideoPlayer.cpp  VideoPlayer.hpp
Game/src/Engine/Timing/: TimingBase.cpp
Game/src/Resources/: DefaultConfiguration.h  GameResources.cpp  SkinStructs.hpp
Game/src/Scenes/: GameplayScene.cpp  GameplayScene.h  LoadingScene.cpp  LoadingScene.h  MainMenu.cpp  ResultScene.cpp  SongSelectScene.cpp  SongSelectScene.h
Game/src/Scenes/Overlays/: Settings.cpp  Settings.h
lib/: CMakeLists.txt
lib/include/: Configuration.h
lib/include/Fonts/: FontManager.h
lib/include/Graphics/: GraphicsBackendBase.h  NativeWindow.h  Renderer.h
lib/include/Imgui/: imgui.h
lib/include/Math/: Tween.h  UDim.h  UDim2.h
lib/include/Misc/: Filesystem.h
lib/include/Screens/: Base.h  ScreenManager.h
lib/include/UI/: Image.h  Text.h  UIBase.h
lib/src/: Configuration.cpp  Game.cpp  Logs.cpp
lib/src/Exceptions/: EstException.cpp
lib/src/Fonts/: FontManager.cpp
lib/src/Graphics/: NativeWindow.cpp  Renderer.cpp
lib/src/Graphics/Backends/OpenGL/: OpenGLBackend.cpp
lib/src/Graphics/Backends/Vulkan/: VulkanBackend.cpp  VulkanBackend.h  VulkanDescriptor.h  VulkanTexture2D.cpp  VulkanTexture2D.h
lib/src/Graphics/Backends/Vulkan/Misc/: VkCommandPool.cpp  VkCommandPool.h  VkDevice.cpp  VkDevice.h  VkImage.cpp  VkImage.h  VkMemory.cpp  VkMemory.h  VkNormalBlend.h  VkPipeline.cpp  VkPipeline.h  VkRenderchain.cpp  VkRenderchain.h  VkRenderpass.cpp  VkRenderpass.h  VkShader.cpp  VkShader.h  VkSwapchain.cpp  VkSwapchain.h  vkinit.cpp  vkinit.h
lib/src/Graphics/ImguiBackends/: imgui_impl_sdl2.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
lib/src/Graphics/Shaders/GLSL/: sdf_text.frag
lib/src/Graphics/Shaders/SPV/: image.spv.h  sdf_text.spv.h  text.spv.h
lib/src/Imgui/: imgui_draw.cpp  imgui_freetype.cpp
lib/src/Inputs/: InputManager.cpp
lib/src/Math/: Tween.cpp  UDim.cpp  UDim2.cpp
lib/src/Misc/: Filesystem.cpp
lib/src/Screens/: ScreenManager.cpp
lib/src/Threads/: Thread.cpp
lib/src/UI/: Image.cpp  Rectangle.cpp  Sprite.cpp  Text.cpp  UIBase.cpp
src/: CMakeLists.txt  main.cpp
src/Game/: DefaultConfiguration.cpp  DefaultConfiguration.h  Env.cpp  Env.h  MsgBoxEx.cpp  O2Game.cpp
src/Game/Core/: RhythmEngine.cpp  RhythmEngine.h
src/Game/Core/Audio/: SampleManager.cpp  SampleManager.h
src/Game/Core/Database/: MusicListMaker.cpp  MusicListMaker.h
src/Game/Core/Drawable/: Image.cpp  ImageGenerators.cpp  NumberSprite.cpp  Sprite.cpp
src/Game/Core/Enums/: FrameRate.h
src/Game/Core/Imgui/: Imgui.cpp  Imgui.h
src/Game/Core/Math/: SkinAnimation.cpp  SkinAnimation.h
src/Game/Core/Networking/: GameCoordinator.cpp  GameCoordinator.h
src/Game/Core/Networking/Socket/: client.cpp  client.h  socketwrapper.cpp  socketwrapper.h
src/Game/Core/Notes/: Note.cpp  Note.h  NoteCacheManager.cpp  Track.cpp  Track.h
src/Game/Core/Resources/: NoteImages.cpp
src/Game/Core/Skinning/: LuaManager.cpp  LuaManager.h  LuaSkin.cpp  LuaSkin.h  SkinStructs.h
src/Game/Core/Skinning/Bindings/: LuaColor3.cpp  LuaColor3.h  LuaMath.cpp  LuaMath.h  LuaUDim.cpp  LuaUDim.h  LuaUDim2.cpp  LuaUDim2.h  LuaVector2.cpp  LuaVector2.h
src/Game/Core/Timings/: TimingBase.cpp
src/Game/Data/Util/: Util.cpp
src/Scenes/: Gameplay.cpp  Gameplay.h  Loading.cpp  Loading.h  Result.cpp  Result.h  SceneList.h  SongSelect.cpp  SongSelect.h
vcpkg/triplets/: x64-windows.cmake
